force-app/main/default/objects/Guitar_Video__c/Guitar_Video__c.object-meta.xml
<CustomObject>
    <description>Represents a guitar lesson video available in the Andy Academy catalog.</description>
    <label>Guitar Video</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guitar Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>