force-app/main/default/objects/Guitar_Video__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technique</fullName>
            </value>
            <value>
                <fullName>Theory</fullName>
            </value>
            <value>
                <fullName>Song Lesson</fullName>
            </value>
            <value>
                <fullName>Gear &amp; Tone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>