force-app/main/default/objects/Guitar_Video__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>