force-app/main/default/objects/Guitar_Video__c/fields/Is_Free_Preview__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Preview</label>
    <type>Checkbox</type>
</CustomField>