force-app/main/default/objects/Guitar_Video__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <formula>&quot;https://img.youtube.com/vi/&quot; &amp; YouTube_ID__c &amp; &quot;/mqdefault.jpg&quot;</formula>
    <label>Thumbnail URL</label>
    <type>Text</type>
</CustomField>