force-app/main/default/objects/Guitar_Video__c/fields/YouTube_ID__c.field-meta.xml
<CustomField>
    <fullName>YouTube_ID__c</fullName>
    <label>YouTube ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>